# bookpi

./: .gitignore  BUILD.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  bookpi.sh  install.sh
display/: .gitignore  Makefile  main.py  main.spec  requirements.txt  statistics.py
frontend/: .eslintrc.js  Makefile  package.json
frontend/public/: 404.html  index.html  manifest.json
frontend/src/: api.js  index.js  router.js
frontend/src/components/: entries.js  entry.js  footer.js  header.js
frontend/src/pages/: account.js  chat.js  files.js  home.js  not-found.js  shared.js  sign-in.js  sign-up.js
frontend/src/style/: index.css  user-form.css
server/: .gitignore  Cargo.toml  Makefile  Rocket.toml  b0x.yml  config.go  go.mod  go.sum  main.go  middleware.go  not_found.go
server/assets/: ab0x.go  fileserver.go
server/hash/: hash.go  util.go  verify.go
server/migrations/2019-12-01-045852_users/: up.sql
server/models/: buckets.go  chat.go  session.go  share.go  user.go
server/responses/: error.go  success.go
server/routes/: authentication.go  chats.go  files.go  messages.go  shares.go  users.go
server/src/: errors.rs  main.rs  models.rs  schema.rs
server/src/util/: hash.rs  mod.rs  responses.rs
services/: display.service  server.service
