[package]
name = "bookpi-server"
version = "0.1.0"
authors = ["Alex Krantz <alex@alexkrantz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argonautica = "0.2"
chrono = { version = "0.4.9", features = ["serde"] }
diesel = { version = "1.4.3", features = ["chrono"] }
dotenv = "0.15"
lazy_static = "1.4"
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["json", "diesel_sqlite_pool", "tera_templates"] }
serde = "1.0.39"
serde_derive = "1.0.102"
serde_json = "1.0.39"
