[package]
name = "server"
version = "0.1.0"
authors = ["Alex Krantz <alex@alexkrantz.com>"]
edition = "2018"

[dependencies]
actix-identity = "0.1.0"
actix-web = "1.0.9"
argonautica = "0.2.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.1"
lazy_static = "1.4.0"
r2d2 = "0.8.7"
serde = "1.0.103"
serde_json = "1.0.42"
serde_derive = "1.0.103"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
